<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/relativeLayoutContainer"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:layout_gravity="center"
	android:background="@color/activity_picture_background">
	<!-- android:background="@drawable/ic_picture_background"-->
	<ImageView
		android:id="@+id/imageViewPicturePreview"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"/>
</RelativeLayout>
