<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:background="#FAF0FF">
	<FrameLayout
		android:id="@+id/frameLayoutOptions"
		android:layout_width="fill_parent"
		android:layout_height="60dip"
		android:layout_alignParentTop="true">
		<ImageView
			android:layout_height="fill_parent"
			android:layout_width="fill_parent"
			android:src="@drawable/ic_option_dialog_header_rounded"
			android:scaleType="fitXY"/>
		<TextView
			android:id="@+id/textViewOptionsTitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical|left"
			android:layout_marginLeft="15dip"
			android:textColor="#e5e5e5"
			android:textStyle="bold"
			android:textSize="30dip"/>
	</FrameLayout>

	<ListView
		android:id="@+id/listViewOptions"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/frameLayoutOptions"
		android:cacheColorHint="#00000000"/>


<!-- 
	<Button
		android:id="@+id/buttonOptionsCancel"
		android:layout_width="100dip"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true"
		android:text="@string/button_cancel"
		android:gravity="center"/>
	<ListView
		android:id="@+id/listViewOptions"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/frameLayoutOptions"
		android:layout_above="@id/buttonOptionsCancel"/>
 -->
</RelativeLayout>
