...
    <string name="dialog_color_title">Pick a Color</string>
    <string name="dialog_color_volume">Value:</string>
    <string name="dialog_color_alpha">Transparency / Alpha</string>
    
    <!-- Picture Menu -->
    <string name="effects">Effects</string>
    <string name="tools">Tools</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="more">More</string>
    
    <!-- Partial Menus -->
...
